# HyperShare

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
demos/: DEMO_SHOWCASE.md  README.md  portfolio_demo.sh  quick_start_local.sh  quick_start_local_fixed.sh  terminal_screenshot_demo.sh
demos/benchmarks/: performance_validation.sh
demos/development_team/: setup_team_network.sh
demos/speed_test/: run_speed_test.sh
include/hypershare/core/: ipc_client.hpp  ipc_server.hpp
include/hypershare/crypto/: crypto_types.hpp  file_verification.hpp  secure_handshake.hpp  signature.hpp
include/hypershare/network/: connection.hpp  connection_manager.hpp  file_announcer.hpp  file_protocol.hpp  peer_router.hpp  protocol.hpp  secure_connection_manager.hpp
include/hypershare/storage/: chunk_manager.hpp  file_index.hpp  file_metadata.hpp  resume_manager.hpp  storage_config.hpp
include/hypershare/transfer/: bandwidth_limiter.hpp  flow_control.hpp  performance_monitor.hpp  transfer_manager.hpp  transfer_session.hpp
src/: CMakeLists.txt  main.cpp
src/core/: cli.cpp  command_handler.cpp  command_registry.cpp  config.cpp  ipc_client.cpp  ipc_server.cpp  logger.cpp  utils.cpp
src/crypto/: crypto_types.cpp  encryption.cpp  file_verification.cpp  hash.cpp  key_manager.cpp  random.cpp  secure_handshake.cpp  signature.cpp
src/network/: connection.cpp  connection_manager.cpp  file_announcer.cpp  file_protocol.cpp  message_handler.cpp  network_manager.cpp  peer_router.cpp  protocol.cpp  secure_message.cpp  tcp_client.cpp  tcp_server.cpp  udp_discovery.cpp
src/storage/: chunk_manager.cpp  file_index.cpp  file_metadata.cpp  resume_manager.cpp  storage_config.cpp
src/transfer/: bandwidth_limiter.cpp  flow_control.cpp  performance_monitor.cpp  transfer_manager.cpp  transfer_session.cpp
tests/: CMakeLists.txt
tests/benchmarks/: crypto_benchmarks.cpp  network_benchmarks.cpp
tests/integration/: test_key_rotation_integration.cpp  test_networking.cpp
tests/unit/: test_config.cpp  test_encryption.cpp  test_file_protocol.cpp  test_file_storage.cpp  test_file_transfer_framework.cpp  test_logger.cpp  test_message_handler.cpp  test_peer_router.cpp  test_performance_reliability.cpp  test_protocol.cpp  test_secure_handshake.cpp  test_security_comprehensive.cpp  test_transfer_session.cpp  test_utils.cpp
